[package]
name = "xdptoolkit"
version = "0.1.0"
edition = "2021"

[build-dependencies]
bindgen = "0.69"

[profile.dev]
opt-level = 2 # opt-level 0 doesn't elide code in ip_parsing, which fails to compile to bpf.
debug = true
debug-assertions = false
overflow-checks = true
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
